// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not run installer if no deps in package: install in dir 1`] = `
Array [
  Array [
    "<repoRoot>/packages/kbn-pm/src/commands",
    Array [],
  ],
]
`;

exports[`handles dependencies of dependencies: install in dir 1`] = `
Array [
  Array [
    "<repoRoot>/packages/kbn-pm/src/commands",
    Array [],
  ],
  Array [
    "<repoRoot>/packages/kbn-pm/src/commands/packages/bar",
    Array [],
  ],
  Array [
    "<repoRoot>/packages/kbn-pm/src/commands/packages/foo",
    Array [],
  ],
]
`;
